# CodonFM

./: README.md  pyproject.toml
.github/workflows/: auto-close-prs.yml
codonfm/: __init__.py
codonfm/src/: __init__.py
codonfm/src/models/: encodon_pl.py
src/: tasks.py
