[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codonfm"
version = "0.1.0"
description = "CodonFM - Codon language model"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "lightning>=2.5.2",
    "torchmetrics>=1.8.0",
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "hydra-optuna-sweeper>=1.2.0",
    "wandb>=0.21.0",
    "rootutils>=1.0.7",
    "pre-commit>=4.0.1",
    "rich>=13.9.4",
    "pytest>=8.1.1",
    "sh>=2.2.2",
    "transformers>=4.54.1",
    "polars>=1.12.0",
    "xformers>=0.0.28.post3",
    "ninja>=1.11.1.1",
    "einops>=0.8.0",
    "ipython-autotime>=0.3.2",
    "seaborn>=0.13.2",
    "lru-dict>=1.3.0",
    "datasets>=4.0.0",
    "scanpy>=1.11.3",
    "pyfaidx>=0.8.1.4",
    "biopython>=1.85",
    "peft>=0.15.2",
    "fiddle>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["codonfm*"]
